@@ -4,7 +4,9 @@ import org.github.springframework.aop.AdvisedSupport;
 import org.github.springframework.aop.MethodMatcher;
 import org.github.springframework.aop.TargetSource;
 import org.github.springframework.aop.aspectj.AspectJExpressionPointcut;
+import org.github.springframework.aop.framework.CglibAopProxy;
 import org.github.springframework.aop.framework.JdkDynamicAopProxy;
+import org.junit.Before;
 import org.junit.Test;
 import org.springframework.test.common.WorldServiceInterceptor;
 import org.springframework.test.service.WorldService;
@@ -15,18 +17,34 @@ import org.springframework.test.service.WorldServiceImpl;
  * @date 2024/1/25 17:53
  */
 public class DynamicProxyTest {
+    private AdvisedSupport advisedSupport;
+
+    @Before
+    public void setup(){
+        WorldServiceImpl worldService = new WorldServiceImpl();
+
+        TargetSource targetSource = new TargetSource(worldService);
+        advisedSupport = new AdvisedSupport();
+        WorldServiceInterceptor worldServiceInterceptor = new WorldServiceInterceptor();
+        MethodMatcher methodMatcher = new AspectJExpressionPointcut("execution(* org.springframework.test.service.WorldService.explode(..))").getMethodMatcher();
+        advisedSupport.setMethodInterceptor(worldServiceInterceptor);
+        advisedSupport.setMethodMatcher(methodMatcher);
+        advisedSupport.setTargetSource(targetSource);
+    }
+
     @Test
     public void testJdkDynamicProxy() throws Exception{
-        WorldService worldService = new WorldServiceImpl();
-        AdvisedSupport advisedSupport = new AdvisedSupport();
-        TargetSource targetSource = new TargetSource(worldService);
-        WorldServiceInterceptor methodInterceptor = new WorldServiceInterceptor();
-        MethodMatcher methodMatcher = new AspectJExpressionPointcut("execution(* org.springframework.test.service.WorldService.explode(..))").getMethodMatcher();
-        advisedSupport.setTargetSource(targetSource);
-        advisedSupport.setMethodInterceptor(methodInterceptor);
-        advisedSupport.setMethodMatcher(methodMatcher);
+        WorldService proxy = (WorldService)new JdkDynamicAopProxy(advisedSupport).getProxy();
+        proxy.explode();
+    }
 
-        WorldService proxy = (WorldService) new JdkDynamicAopProxy(advisedSupport).getProxy();
+    @Test
+    public void testCglibDynamicProxy() throws Exception{
+        /**
+         *特别说明
+         * --add-opens java.base/java.lang=ALL-UNNAMED
+         */
+        WorldService proxy = (WorldService)new CglibAopProxy(advisedSupport).getProxy();
         proxy.explode();
     }
 }
